  dialog write statistics now writes a JSON file if name of file to write ends with .json
- improve memory usage by introducing different constraint handlers for full orbitopes and packing/partitioning orbitopes
- adds objective types for Benders' decomposition. The choice is for summation of subproblem objectives (classical
  approach) or the minimum of the maximum subproblem objective.

Performance improvements
------------------------

- reimplemented SCIPvarGetActiveRepresentatives() by using dense arrays to avoid repeated resorting.

Examples and applications
-------------------------

- Coloring: new parameter branching/coloring/strategy to choose the least/most fractional variable for branching

Interface changes
-----------------

### New and changed callbacks
- added a new callback TABLE_COLLECT for the table plugin that collects the data for the specific statistics table in a SCIP_DATATREE object
- for a table plugin, only one of the callbacks TABLE_COLLECT or TABLE_OUTPUT needs to be implemented, but implementing both is preferred;
  if TABLE_OUTPUT is omitted, then SCIP tries to print a table from the data given by TABLE_COLLECT

### Deleted and changed API methods

- SCIPgetProbvarLinearSum: remove parameter mergemultiples, which is now automatically true with the new implementation of SCIPvarGetActiveRepresentatives.
- SCIPcreateRow*(), SCIPaddVarToRow(), SCIPaddVarsToRow(), SCIPaddVarsToRowSameCoef() can now only be called in the solving stage,
  because otherwise the LP is not yet available and the row data is invalid.
- intvar removed from arguments for SCIPcreateConsPseudobooleanWithConss(), SCIPcreateConsPseudoboolean(), and SCIPcreateConsBasicPseudoboolean() due to dysfunctionality of non-linear objective reformulation with pseudoboolean constraint
- ndelconss added to arguments for SCIPcleanupConssLinear() and SCIPcleanupConssKnapsack() to directly delete empty redundant constraints before creating problem matrix